@@ -634,7 +634,7 @@ PyAPI_DATA(PyObject) _Py_NoneStruct; /* Don't use this directly */
 #define Py_None (&_Py_NoneStruct)
 
 /* Macro for returning Py_None from a function */
-#define Py_RETURN_NONE Py_INCREF(Py_None); return Py_None;
+#define Py_RETURN_NONE {Py_INCREF(Py_None); return Py_None;}
 
 /*
 Py_NotImplemented is a singleton used to signal that an operation is
