@@ -155,6 +155,9 @@ Build
 C API
 -----
 
+- Added three new macros: Py_RETURN_NONE, Py_RETURN_TRUE, and Py_RETURN_FALSE.
+  Each return the singleton they mention after Py_INCREF()ing them.
+
 - Added a new function, PyTuple_Pack(n, ...) for constructing tuples from a
   variable length argument list of Python objects without having to invoke
   the more complex machinery of Py_BuildValue().  PyTuple_Pack(3, a, b, c)
